--- a/index.html
+++ b/index.html
@@ -13,6 +13,15 @@
   />
   <link rel="stylesheet" href="./src/styles.css" />
   <body>
-    <header><h1>Welcome to Kristiansand</h1></header>
+    <header>
+      <h1>Welcome to Kristiansand</h1>
+      <h2>City in Agder, Norway</h2>
+    </header>
+    <footer>
+      This project was code by Feiling Tandiono and is
+      <a href="https://github.com/ling83-ft/kristiansand-travel-project"
+        >open-sourced</a
+      >
+    </footer>
   </body>
 </html>
