--- a/index.html
+++ b/index.html
@@ -13,9 +13,12 @@
   />
   <link rel="stylesheet" href="./src/styles.css" />
   <body>
+    <div class="container"></div>
     <header>
+      <h3>.TRAVEL.</h3>
       <h1>Welcome to Kristiansand</h1>
       <h2>City in Agder, Norway</h2>
+      <a href="#more">Learn more</a>
     </header>
     <footer>
       This project was code by Feiling Tandiono and is
