--- a/index.html
+++ b/index.html
@@ -21,10 +21,48 @@
       <a href="#more">Learn more</a>
     </header>
     <footer>
-      This project was code by Feiling Tandiono and is
-      <a href="https://github.com/ling83-ft/kristiansand-travel-project"
-        >open-sourced</a
-      >
+      <section class="grid">
+        <div>
+          <h3>More about Kristiansand</h3>
+          <ul>
+            <li>
+              <a
+                href="https://avinor.no/en/airport/kristiansand-airport/"
+                target="_blank"
+                >Kristiansand airport website</a
+              >
+            </li>
+            <li>
+              <a
+                href="https://kommunekart.com/klient/kristiansand/kristiansandskart"
+                target="_blank"
+                >Map of Kristiansand</a
+              >
+            </li>
+            <li>
+              <a href="https://www.akt.no/reiseplanlegger/" target="_blank"
+                >Public transport map</a
+              >
+            </li>
+          </ul>
+        </div>
+        <div>
+          <h3>About me</h3>
+          <p>
+            Hi! My name is Feiling and I've been living in Kristiansand for
+            several years. I'm very fond of the city. I created this page as
+            part of a project for SheCodes Responsive to develop my coding
+            skills.
+          </p>
+        </div>
+        <div>
+          <h3>About this website</h3>
+          <p>
+            I created this page as part of a project for SheCodes Responsive to
+            develop my coding skills.
+          </p>
+        </div>
+      </section>
     </footer>
   </body>
 </html>
