--- a/index.html
+++ b/index.html
@@ -20,8 +20,138 @@
       <h2>City in Agder, Norway</h2>
       <a href="#more">Learn more</a>
     </header>
+    <main>
+      <section class="grid grid-2-columns">
+        <div>
+          <img
+            src="/images/domkirke.jpg"
+            alt="Kristiansand Domkirke"
+            class="img-responsive"
+          />
+        </div>
+        <div>
+          <h2>Why Kristiansand?</h2>
+          <h3>Kristiansand, summer city</h3>
+          <p>
+            Kristiansand is the largest city located between Oslo and Stavanger.
+            Kristiansand is located on Norway's southern coast and has long been
+            a favourite summer holidays spot amongst Norwegians. The sea and
+            surrounding fjords are perfect for recreational activities like
+            fishing and sailing. Kristiansand is the business and cultural
+            capital of Southern Norway. Nicknamed "the coolest riviera" by the
+            media, it is a modern city with a cosmopolitan history. The city was
+            named after its founder King Christian IV in 1641. The name was
+            written "Christian(s)sand" (for "Christians sand" - meaning
+            en:(King) "Christian's Sand") until 1877. Then, the ch was changed
+            to k, the form was changed to "Kristianssand". The name was again
+            changed to its present form Kristiansand in 1889.
+          </p>
+        </div>
+      </section>
+      <section class="secondary">
+        <h2 class="text-center">cafes</h2>
+        <h3 class="text-center">My favorite cafes in Kristiansand</h3>
+        <div class="grid grid-3-columns">
+          <div class="card">
+            <div class="card-header">
+              <img
+                src="/images/tiara-kaffe.jpg"
+                alt="Tiara Kafe"
+                class="img-responsive"
+              />
+            </div>
+            <div class="card-body">
+              <h4>Tiara Kafe</h4>
+              <p>
+                Tiara Kaffebrenneri roasts and brews specialty coffee in the
+                center of Kristiansand. At their locations at Markens and
+                Rådhusgata, they offer their own specialty coffee, a large
+                selection of teas, baked goods, spreads and simple hot dishes.
+              </p>
+              <h5>Address:</h5>
+              <p>Markens gate 44, 4612 Kristiansand, Norway</p>
+              <h5>What i like about it</h5>
+              <p>
+                Here they have the best coffee I know about, both hot and cold
+                varieties. Actually so good that I miss it when I'm on vacation.
+                Really balanced taste, not too sour or bitter - perfect! Well
+                worth the money and my go-to place when I'm gonna enjoy myself
+              </p>
+            </div>
+            <div class="card-footer">
+              <a href="https://tiarakaffe.no/" class="btn" target="_blank"
+                >Learn more</a
+              >
+            </div>
+          </div>
+          <div class="card">
+            <div class="card-header">
+              <img
+                src="/images/Cuba-life.jpg"
+                alt="Cuba Life Kafe"
+                class="img-responsive"
+              />
+            </div>
+            <div class="card-body">
+              <h4>Cuba Life Kafe</h4>
+              <p>
+                Cuba Life is Kristiansands' oldest coffee bar and started in
+                Tollbodgata 6 over 14 years ago. Over the years, the place has
+                been an important meeting place for everyone.
+              </p>
+              <h5>Address:</h5>
+              <p>Markens gate 53, 4612 Kristiansand</p>
+              <h5>What i like about it</h5>
+              <p>
+                You get the absolute best coffee and service at Cuba Life. Very
+                good selection of coffee. Nice little cafe with space outside
+                and inside, right on the main street.
+              </p>
+            </div>
+            <div class="card-footer">
+              <a
+                href="https://www.facebook.com/cubalifekristiansand/#"
+                class="btn"
+                target="_blank"
+                >Learn more</a
+              >
+            </div>
+          </div>
+          <div class="card">
+            <div class="card-header">
+              <img
+                src="/images/camillo-bastrup.jpg"
+                alt="Camillo Bastrup Kafe"
+                class="img-responsive"
+              />
+            </div>
+            <div class="card-body">
+              <h4>Camillo Bastrup Kafe</h4>
+              <p>
+                Pleasant little coffee shop in the center of Kristiansand. The
+                coffee bar offers an ample selection of quality coffee, brewing
+                equipment, baked goods and lunch dishes.
+              </p>
+              <h5>Address:</h5>
+              <p>Markens gate 53, 4612 Kristiansand</p>
+              <h5>What i like about it</h5>
+              <p>
+                This is one of the best brunch spots in Kristiansand but if you
+                go at any time of day there will be something delicious on the
+                menu!
+              </p>
+            </div>
+            <div class="card-footer">
+              <a href="https://www.dampbageriet.no/" class="btn" target="_blank"
+                >Learn more</a
+              >
+            </div>
+          </div>
+        </div>
+      </section>
+    </main>
     <footer>
-      <section class="grid">
+      <section class="grid grid-3-columns-with-first-narrow">
         <div>
           <h3>More about Kristiansand</h3>
           <ul>
