--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
           />
         </div>
         <div>
+          <a name="more"></a>
           <h2>Why Kristiansand?</h2>
           <h3>Kristiansand, summer city</h3>
           <p>
@@ -53,12 +54,20 @@
         <h3 class="text-center">My favorite cafes in Kristiansand</h3>
         <div class="grid grid-3-columns">
           <div class="card">
-            <div class="card-header">
+            <div class="card-header grid grid-2-columns">
               <img
                 src="/images/tiara-kaffe.jpg"
                 alt="Tiara Kafe"
                 class="img-responsive"
               />
+              <iframe
+                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2105.573630565574!2d7.98720417669233!3d58.14733877406361!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4638025f9d431e0b%3A0xd5ccc1bbc5667464!2sTiara%20Kaffebrenneri%20Markens%20gate!5e0!3m2!1sen!2sno!4v1751263740708!5m2!1sen!2sno"
+                class="embed"
+                style="border: 0"
+                allowfullscreen=""
+                loading="lazy"
+                referrerpolicy="no-referrer-when-downgrade"
+              ></iframe>
             </div>
             <div class="card-body">
               <h4>Tiara Kafe</h4>
@@ -85,12 +94,20 @@
             </div>
           </div>
           <div class="card">
-            <div class="card-header">
+            <div class="card-header grid grid-2-columns">
               <img
-                src="/images/Cuba-life.jpg"
+                src="/images/Cuba-life-1.jpg"
                 alt="Cuba Life Kafe"
                 class="img-responsive"
               />
+              <iframe
+                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d8422.965404170545!2d7.976057558063197!3d58.144503167780385!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4638025e1faab781%3A0x697f01faad9de8c8!2sCuba%20Life%20Kaffebar!5e0!3m2!1sen!2sno!4v1751264378443!5m2!1sen!2sno"
+                class="embed"
+                style="border: 0"
+                allowfullscreen=""
+                loading="lazy"
+                referrerpolicy="no-referrer-when-downgrade"
+              ></iframe>
             </div>
             <div class="card-body">
               <h4>Cuba Life Kafe</h4>
@@ -100,7 +117,7 @@
                 been an important meeting place for everyone.
               </p>
               <h5>Address:</h5>
-              <p>Markens gate 53, 4612 Kristiansand</p>
+              <p>Tollbodgata 6, 4611 Kristiansand</p>
               <h5>What i like about it</h5>
               <p>
                 You get the absolute best coffee and service at Cuba Life. Very
@@ -118,12 +135,20 @@
             </div>
           </div>
           <div class="card">
-            <div class="card-header">
+            <div class="card-header grid grid-2-columns">
               <img
                 src="/images/camillo-bastrup.jpg"
                 alt="Camillo Bastrup Kafe"
                 class="img-responsive"
               />
+              <iframe
+                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2105.5676328615586!2d7.986512876692327!3d58.14744017406365!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4638025f7fb8ffb5%3A0xceb69d79a8c45a47!2sCamillo%20Bastrup!5e0!3m2!1sen!2sno!4v1751264492446!5m2!1sen!2sno"
+                class="embed"
+                style="border: 0"
+                allowfullscreen=""
+                loading="lazy"
+                referrerpolicy="no-referrer-when-downgrade"
+              ></iframe>
             </div>
             <div class="card-body">
               <h4>Camillo Bastrup Kafe</h4>
@@ -145,6 +170,56 @@
               <a href="https://www.dampbageriet.no/" class="btn" target="_blank"
                 >Learn more</a
               >
+            </div>
+          </div>
+        </div>
+      </section>
+      <section>
+        <h2 class="text-center">Gallery</h2>
+        <h3 class="text-center">Photos from Kristiansand</h3>
+        <div class="instagram-embeds">
+          <div class="grid grid-3-columns">
+            <div>
+              <img
+                src="/images/kristiansand-1.jpg"
+                alt=""
+                class="img-responsive"
+              />
+            </div>
+            <div>
+              <img
+                src="/images/kristiansand-2.jpg"
+                alt=""
+                class="img-responsive"
+              />
+            </div>
+            <div>
+              <img
+                src="/images/kristiansand-3.jpg"
+                alt=""
+                class="img-responsive"
+              />
+            </div>
+            <div>
+              <img
+                src="/images/kristiansand-4.jpg"
+                alt=""
+                class="img-responsive"
+              />
+            </div>
+            <div>
+              <img
+                src="/images/kristiansand-5.jpg"
+                alt=""
+                class="img-responsive"
+              />
+            </div>
+            <div>
+              <img
+                src="/images/kristiansand-6.jpg"
+                alt=""
+                class="img-responsive"
+              />
             </div>
           </div>
         </div>
