--- a/index.html
+++ b/index.html
@@ -177,47 +177,47 @@
       <section>
         <h2 class="text-center">Gallery</h2>
         <h3 class="text-center">Photos from Kristiansand</h3>
-        <div class="instagram-embeds">
+        <div class="pic-embeds">
           <div class="grid grid-3-columns">
             <div>
               <img
                 src="/images/kristiansand-1.jpg"
-                alt=""
+                alt="Kilden"
                 class="img-responsive"
               />
             </div>
             <div>
               <img
                 src="/images/kristiansand-2.jpg"
-                alt=""
+                alt="Dyreparken"
                 class="img-responsive"
               />
             </div>
             <div>
               <img
                 src="/images/kristiansand-3.jpg"
-                alt=""
+                alt="Lighthouse"
                 class="img-responsive"
               />
             </div>
             <div>
               <img
                 src="/images/kristiansand-4.jpg"
-                alt=""
+                alt="Domkirke"
                 class="img-responsive"
               />
             </div>
             <div>
               <img
                 src="/images/kristiansand-5.jpg"
-                alt=""
+                alt="Skjærgården"
                 class="img-responsive"
               />
             </div>
             <div>
               <img
                 src="/images/kristiansand-6.jpg"
-                alt=""
+                alt="Fiskebrygga"
                 class="img-responsive"
               />
             </div>
